# rocket_oauth2

./: .mise.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/user_info/: Cargo.toml  Rocket.toml.example
examples/user_info/src/: main.rs
examples/user_info_custom_provider/: .gitignore  Cargo.toml  Rocket.toml.example  run_with_env_var.sh
examples/user_info_custom_provider/src/: main.rs
examples/user_info_custom_provider/src/oauth2/: github.rs
examples/user_info_hyper_rustls/: Cargo.toml
examples/user_info_hyper_rustls/src/: main.rs
examples/user_info_hyper_sync_rustls/: Cargo.toml  Rocket.toml.example
examples/user_info_hyper_sync_rustls/src/: main.rs
rocket_tls_compat_check/: Cargo.toml
src/: config.rs  core.rs  error.rs  hyper_rustls_adapter.rs  hyper_sync_rustls_adapter.rs  lib.rs  provider.rs  query.rs
