[package]
name = "rocket_oauth2"
version = "0.5.0-dev"
description = "OAuth2 for Rocket applications"
documentation = "https://docs.rs/rocket_oauth2/"
homepage = "https://github.com/jebrosen/rocket_oauth2"
repository = "https://github.com/jebrosen/rocket_oauth2"
authors = ["Jeb Rosen <jeb@jebrosen.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[workspace]
members = ["examples/user_info_hyper_rustls", "examples/user_info_custom_provider"]

[features]
default = ["hyper_rustls_adapter"]
hyper_rustls_adapter = ["hyper", "hyper-rustls"]

[dependencies]
async-trait = "0.1.30"
base64 = "0.13"
log = "0.4.4"
rand = { version = "0.7", default-features = false, features = ["std"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", default-features = false, features = ["secrets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "2.0"

# hyper-rustls adapter
hyper = { version = "0.13", optional = true }
hyper-rustls = { version = "0.21", optional = true }
