[package]
name = "rocket_oauth2"
version = "0.5.0"
description = "OAuth2 for Rocket applications"
documentation = "https://docs.rs/rocket_oauth2/"
homepage = "https://github.com/jebrosen/rocket_oauth2"
repository = "https://github.com/jebrosen/rocket_oauth2"
authors = ["Jeb Rosen <jeb@jebrosen.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[workspace]
members = ["examples/user_info", "examples/user_info_custom_provider"]

[features]
default = ["hyper_rustls_adapter"]
hyper_rustls_adapter = ["http-body-util", "hyper", "hyper-rustls", "hyper-util"]

[dependencies]
async-trait = "0.1.30"
base64 = "0.22"
log = "0.4.4"
rand = { version = "0.8", default-features = false, features = ["std"] }
rocket = { git = "https://github.com/rwf2/Rocket.git", rev = "8b9d906cc4923fdf6f2b860e0da2ab00f1993796", features = ["secrets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "2.0"

# hyper-rustls adapter
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "tls12", "logging", "ring"], optional = true }
hyper-util = { version = "0.1", optional = true }
