[package]
name = "rocket_tls_compat_check"
version = "0.0.0"
authors = ["Jeb Rosen <jeb@jebrosen.com>"]
publish = false
edition = "2018"

# Separate workspace, to assist testing multiple versions of hyper-sync-rustls and ring.
# (Each workspace can only resolve to a single, unified version of each crate within a major version)
[workspace]

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["tls"] }
rocket_oauth2 = { path = "../", features = ["hyper_rustls_adapter"] }
