[package]
name = "user_info"
version = "0.0.0"
authors = ["jeb <jeb@jebrosen.com>"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11.0", default-features = false, features = ["json", "rustls-tls"] }
rocket = "0.5.0-rc.1"
rocket_oauth2 = { path = "../../", features = ["hyper_rustls_adapter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
