[package]
name = "user_info"
version = "0.0.0"
authors = ["jeb <jeb@jebrosen.com>"]
publish = false
edition = "2024"

[dependencies]
anyhow = "1.0"
# NB: rocket_oauth2 enables the 'ring' provider for rustls via hyper_rustls_adapter
reqwest = { version = "0.13.0", default-features = false, features = ["json", "rustls-no-provider"] }
rocket = "0.5"
rocket_oauth2 = { path = "../../", features = ["hyper_rustls_adapter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
