[package]
name = "user_info_custom_provider"
version = "0.0.0"
authors = ["Chris Zehner <cbzehner@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
hyper = "0.14"
hyper-rustls = "0.22"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_oauth2 = { path = "../../", features = ["hyper_rustls_adapter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
