[package]
name = "user_info_custom_provider"
version = "0.0.0"
authors = ["Chris Zehner <cbzehner@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
http-body-util = "0.1"
hyper = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "tls12", "logging", "ring"] }
hyper-util = "0.1"
rocket = "0.5"
rocket_oauth2 = { path = "../../", features = ["hyper_rustls_adapter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
