[package]
name = "user_info_hyper_rustls"
version = "0.0.0"
authors = ["jeb <jeb@jebrosen.com>"]
publish = false
edition = "2018"

[dependencies]
futures-preview = "=0.3.0-alpha.18"
hyper = "=0.13.0-alpha.2"
hyper-rustls = "=0.18.0-alpha.1"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
rocket_oauth2 = { path = "../../", features = ["hyper_rustls_adapter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
